Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7773

qmake generated Makefles for mingw32 do not add DEFINES to windres.exe command line

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.1
    • Build tools: qmake
    • None
    • Win7/64
    • 60fca92b1f1f4a6f6c1ac8ac534650ef49af469e

      Just compare MingwMakefileGenerator::writeRcFilePart() and Win32MakefileGenerator::writeRcFilePart().

      The nmake generator add $(DEFINES) whereas the mingw one does not and this breaks some apps, since .rc files are pre-processed like normal .c files.

      Adding '<< " $(DEFINES"' as the last argument to the windres.exe invocation fixes this problem - see attached patch

        1. qmake-mingw-windres.patch
          0.6 kB
          Robert Griebl (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            griebl Robert Griebl (closed Nokia identity) (Inactive)
            griebl Robert Griebl (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes