Add DEFINES to mingw32/windres.exe command line.

qmake didn't add $DEFINES to the windres.exe command line, while it was
added to the rc.exe command line.

Task-number: QTBUG-7773
Reviewed-by: Marius Storm-Olsen